Fixed FOUC on mobile
This fixes the flash of unstyled content on mobile phones or slow
connections.

--- a/jquery.bxslider.css
+++ b/jquery.bxslider.css
@@ -14,6 +14,11 @@
 /** RESET AND LAYOUT
 ===================================*/
 
+.bxslider {
+	padding: 0 !important;
+	visibility: hidden;
+}
+
 .bx-wrapper {
 	position: relative;
 	margin: 0 auto 60px;
